--- a/packages/hardhat-ts/package.json
+++ b/packages/hardhat-ts/package.json
@@ -55,11 +55,13 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.25",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^14.3.2",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
