--- a/packages/vite-app-ts/package.json
+++ b/packages/vite-app-ts/package.json
@@ -35,6 +35,8 @@
     "@ethersproject/signing-key": "^5.5.0",
     "@ethersproject/solidity": "^5.5.0",
     "@ethersproject/units": "^5.5.0",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.5",
     "@maticnetwork/maticjs": "^3.2.3",
     "@portis/web3": "^4.1.0",
     "@ramp-network/ramp-instant-sdk": "^3.0.0",
@@ -51,6 +53,7 @@
     "fortmatic": "^2.2.1",
     "history": "^5.2.0",
     "http-browserify": "^1.7.0",
+    "humanize-duration-ts": "^2.1.1",
     "ipfs-http-client": "^54.0.2",
     "pretty-time": "^1.1.0",
     "process": "^0.11.10",
